--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
             <p class="text code">Hi, my name is</p>
             <p class="name">Odii Daniel</p>
             <p class="about">I enjoy creativity and build things.</p>
-            <p class="text info">I’m a software engineer specializing in 
-                building (and occasionally designing) exceptional digital experiences. 
-                Currently, I’m focused on building accessible, 
-                human-centered products at Upstatement.</p>
+            <p class="text info">I’m a web developer and graphic designer specializing in 
+                building and designing usable and problem solving digital solutions using my skill-set.
+                Currently, I’m focused on creating all friendly, responsive and elegant websites transitioning into SAAS.</p>
   
         </div>
 </div>
@@ -71,7 +70,14 @@
     <span class="about left heading scrollFade">About me.</span>
     <div class="sub">
         <p class="text info">
-            Hello! My name is Brittany and I enjoy creating things that live on the internet. My interest in web development started back in 2012 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!
+            Hi there! My name is Daniel and I enjoy creativity, currently creating things that live on the internet. 
+            I am a very enthusiastic, reliable and diligent individual who has years of experience building and designing responsive, mobile friendly and elegant web pages and apps with high quality service to potential clients.
+            Currently am working as a freelancer on the worlds larget freelance market place @<a>Upwork</a> and have had the opportunity
+            to render professional services to clients globally.
+
+            I am also volunterring as a web developer at Grassroots web.
+            
+            My interest in web development started back in 2012 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!
     Fast-forward to today, and I’ve had the privilege of working at an advertising agency, a start-up, a huge corporation, and a student-led design studio. My main focus these days is building accessible, inclusive products and digital experiences at Upstatement for a variety of clients.
     I also recently launched a course that covers everything you need to build a web app with the Spotify API using Node & React.
     Here are a few technologies I’ve been working with recently:
