--- a/index.html
+++ b/index.html
@@ -72,10 +72,8 @@
         <p class="text info">
             Hi there! My name is Daniel and I enjoy creativity, currently creating things that live on the internet. 
             I am a very enthusiastic, reliable and diligent individual who has years of experience building and designing responsive, mobile friendly and elegant web pages and apps with high quality service to potential clients.
-            Currently am working as a freelancer on the worlds larget freelance market place @<a>Upwork</a> and have had the opportunity
-            to render professional services to clients globally.
-
-            I am also volunterring as a web developer at Grassroots web.
+            Currently am working as a freelancer on the worlds larget freelance market place @<a href="https://www.upwork.com/freelancers/~01beab0c0a35e434b4">Upwork</a> and have had the opportunity
+            to render professional services to clients globally. <br/> currently volunterring as a web developer at <a href="https://grassroots-web.com/">Grassroots web.</a>
             
             My interest in web development started back in 2012 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!
     Fast-forward to today, and I’ve had the privilege of working at an advertising agency, a start-up, a huge corporation, and a student-led design studio. My main focus these days is building accessible, inclusive products and digital experiences at Upstatement for a variety of clients.
