added and modified project one

--- a/index.html
+++ b/index.html
@@ -72,13 +72,8 @@
         <p class="text info">
             Hi there! My name is Daniel and I enjoy creativity, currently creating things that live on the internet. 
             I am a very enthusiastic, reliable and diligent individual who has years of experience building and designing responsive, mobile friendly and elegant web pages and apps with high quality service to potential clients.
-            Currently am working as a freelancer on the worlds larget freelance market place @<a href="https://www.upwork.com/freelancers/~01beab0c0a35e434b4">Upwork</a> and have had the opportunity
-            to render professional services to clients globally. <br/> currently volunterring as a web developer at <a href="https://grassroots-web.com/">Grassroots web.</a>
-            
-            My interest in web development started back in 2012 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!
-    Fast-forward to today, and I’ve had the privilege of working at an advertising agency, a start-up, a huge corporation, and a student-led design studio. My main focus these days is building accessible, inclusive products and digital experiences at Upstatement for a variety of clients.
-    I also recently launched a course that covers everything you need to build a web app with the Spotify API using Node & React.
-    Here are a few technologies I’ve been working with recently:
+            Currently am working as a freelancer on the worlds larget freelance market place @<a href="https://www.upwork.com/freelancers/~01beab0c0a35e434b4"><b>Upwork</b></a> and have had the opportunity
+            to render professional services to clients globally. <br/> currently volunterring as a web developer at <a href="https://grassroots-web.com/"><i>Grassroots web.</i></a>
         </p>
 
         <div style="height: 300px;" class="im">
@@ -106,12 +101,12 @@
             <span class="sub-1 code">featured Project</span>
             <p class="card-name">Project One</p>
             <div class="card-main">
-                A minimal, dark blue theme for VS Code, Sublime Text, 
-                Atom, iTerm, and more. Available on Visual Studio Marketplace, 
-                Package Control, Atom Package Manager, and npm.
+                A minimal, and light weight code snippet beautifier built off inspiration from
+                carbon code editor.
+                Used for creating and making beautiful code snippets for social media posts and sharing with fellow developers.
             </div>
             <div class="card-footer">
-                <p class="text code">VS Code, Hyper, Sublime, getter, HTML</p>
+                <p class="text code">VS Code, carbon, HTML, javascript</p>
                 <span class="">
                     <i class="bi bi-github"></i>
                     <i class="bi bi-arrow-up-right-square"></i>
