added favicon and modified title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
          <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
          <!-- <link rel="stylesheet" href="main.css"> -->
 
-    <title>Document</title>
+    <title>Daniel</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
 
@@ -99,7 +100,7 @@
         <div class="card-content">
         <div class="card-head">
             <span class="sub-1 code">featured Project</span>
-            <p class="card-name">Project One</p>
+            <p class="card-name">Snippy</p>
             <div class="card-main">
                 A minimal, and light weight code snippet beautifier built off inspiration from
                 carbon code editor.
