--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          <!-- <link rel="stylesheet" href="main.css"> -->
 
     <title>Daniel</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
 
