added favicon and modified title

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
 <div class="container">
     <div class="myNav" id="nav">
-        <div class="text code">Logo</div>
+        <!-- <div class="text code">Logo</div> -->
+        <img src="images/logo.png" class="myLogo"/>
         <!--<i class="bi bi-three-dots" id="show-menu" style="color: red;"></i>-->
         <div class="links">
             <div class=""><a href="#about">About</a></div>
@@ -73,8 +74,8 @@
         <p class="text info">
             Hi there! My name is Daniel and I enjoy creativity, currently creating things that live on the internet. 
             I am a very enthusiastic, reliable and diligent individual who has years of experience building and designing responsive, mobile friendly and elegant web pages and apps with high quality service to potential clients.
-            Currently am working as a freelancer on the worlds larget freelance market place @<a href="https://www.upwork.com/freelancers/~01beab0c0a35e434b4"><b>Upwork</b></a> and have had the opportunity
-            to render professional services to clients globally. <br/> currently volunterring as a web developer at <a href="https://grassroots-web.com/"><i>Grassroots web.</i></a>
+            Currently am working as a freelancer on the worlds larget freelance market place <a href="https://www.upwork.com/freelancers/~01beab0c0a35e434b4"><b>@Upwork</b></a> and have had the opportunity
+            to render professional services to clients globally. <br/> currently volunterring as a web developer <a href="https://grassroots-web.com/"><b>@Grassroots web.</b></a>
         </p>
 
         <div style="height: 300px;" class="im">
