--- a/index.html
+++ b/index.html
@@ -23,17 +23,16 @@
  
         <a href="#about"><i class="bi bi-person"></i></a>
         <a href="#projects"><i class="bi bi-code-slash"></i></a>
-        <i class="bi bi-palette-fill"></i>
-       <i class="bi bi-folder-check"></i>
+        <a target="_blank" href="https://drive.google.com/file/d/1-qDbdm3_-J7VyuAswzYRHLrFcT38zpiU/view?usp=sharingDesigner"><i class="bi bi-palette-fill"></i></a>
+        <a target="_blank" href="https://drive.google.com/drive/folders/1yK5gWcKH5PlmmPe3z09rNkMNV9lntszR?usp=sharing"><i class="bi bi-folder-check"></i></a>
    
 </div>
 
 
 <div class="socials fixed" style="flex-direction: column !important;">
-    <a href="#"><i class="bi bi-facebook"></i></a>
-    <a href="#"><i class="bi bi-whatsapp"></i></a>
-    <a href="#"><i class="bi bi-linkedin"></i></a>
-    <a href="#"><i class="bi bi-twitter"></i></a>
+    <a target="_blank" href="https://wa.me/+2348156074667/?text=Hi%20Daniel%20I%20just%20visited%20your%20website%20and%20I%20love%20what%20you%20do!"><i class="bi bi-whatsapp"></i></a>
+    <a target="_blank" href="https://www.linkedin.com/in/odii-daniel-2397b51bb/"><i class="bi bi-linkedin"></i></a>
+    <a target="_blank" href="https://twitter.com/odiidanny"><i class="bi bi-twitter"></i></a>
 </div>
 
 
@@ -48,8 +47,8 @@
         <div class="links">
             <div class=""><a href="#about">About</a></div>
             <div class=""> <a href="#projects">Developer</a></div>
-            <div class="">Designer</div>
-            <button class="my-btn"> Portfolio</button>
+            <div class=""><a target="_blank" href="https://drive.google.com/file/d/1-qDbdm3_-J7VyuAswzYRHLrFcT38zpiU/view?usp=sharingDesigner">Designer</a></div>
+            <a target="_blank" href="https://drive.google.com/drive/folders/1yK5gWcKH5PlmmPe3z09rNkMNV9lntszR?usp=sharing"><button class="my-btn"> Portfolio</button></a>
         </div>
     </div>
 
@@ -95,23 +94,22 @@
     <span class="about left heading">Check out my Projects!</span>
 
 
-    <div class="my-card scrollFade" style="margin-top: 60px !important;" >
-        <div class="card-image">
-                    </div>
+    <div class="my-card scrollFade" style="margin-top: 50px !important;" >
+        <img class="card-image" src="images/mathsdaily.png">
         <div class="card-content">
         <div class="card-head">
             <span class="sub-1 code">featured Project</span>
-            <p class="card-name">Snippy</p>
+            <p class="card-name">Maths-Daily</p>
             <div class="card-main">
-                A minimal, and light weight code snippet beautifier built off inspiration from
-                carbon code editor.
-                Used for creating and making beautiful code snippets for social media posts and sharing with fellow developers.
+                A minimal Quiz website with leaderboard , user authentication, admin interface feature,
+                User result sharing and (as image) download feature with 
+                django powered backend built for a client.
             </div>
             <div class="card-footer">
-                <p class="text code">VS Code, carbon, HTML, javascript</p>
-                <span class="">
-                    <i class="bi bi-github"></i>
-                    <i class="bi bi-arrow-up-right-square"></i>
+                <p class="text code">Django, Heroku</p>
+                <span class="source">
+                    <a href="#" target="_blank"><i class="bi bi-github"></i></a>
+                    <a href="https://maths-daily.herokuapp.com/" target="_blank"><i class="bi bi-arrow-up-right-square"></i></a>
                 </span>
             </div>
         </div>
@@ -119,22 +117,21 @@
     </div>
 
 
-    <div class="my-card card-left scrollFade data-aos="fade-right">
-        <img class="card-image" src="images/project.png">
+    <div class="my-card card-left scrollFade" data-aos="fade-right">
+        <img class="card-image" src="images/snippy.png">
         <div class="card-content content-left">
         <div class="card-head">
             <span class="sub-1 code">featured Project</span>
-            <p class="card-name">Project One</p>
+            <p class="card-name">Snippy</p>
             <div class="card-main">
-                A minimal, dark blue theme for VS Code, Sublime Text, 
-                Atom, iTerm, and more. Available on Visual Studio Marketplace, 
-                Package Control, Atom Package Manager, and npm.
+                A Light weight code snippet generator and beautifier with support for various
+                themes and code syntax highligting fuly powered by javascript.
             </div>
             <div class="card-footer">
-                <p class="text code">VS Code, Hyper, Sublime, getter, HTML</p>
-                <span class="">
-                    <i class="bi bi-github"></i>
-                    <i class="bi bi-arrow-up-right-square"></i>
+                <p class="text code">Vanilla JS, github</p>
+                <span class="source">
+                    <a href="https://github.com/Daniel001-odii/Snippy" target="_blank"><i class="bi bi-github"></i></a>
+                    <a href="https://daniel001-odii.github.io/Snippy/" target="_blank"><i class="bi bi-arrow-up-right-square"></i></a>
                 </span>
             </div>
         </div>
@@ -148,16 +145,17 @@
         <div class="card-content">
         <div class="card-head">
             <span class="sub-1 code">featured Project</span>
-            <p class="card-name">Shelf Book Repo</p>
+            <p class="card-name">Shelf</p>
             <div class="card-main">
-                A lightweight django powered book repository, built as a side project
+                Formaerly called Libry, A django powered book download and sharing website,
                 that enables users to upload, edit and delete books..
+                with admin interface and CRUD operations.
             </div>
             <div class="card-footer">
-                <p class="text code">VS Code, Hyper, Sublime, getter, HTML</p>
-                <span class="">
-                    <i class="bi bi-github"></i>
-                    <i class="bi bi-arrow-up-right-square"></i>
+                <p class="text code">Heroku, Bootstrap, Django</p>
+                <span class="source">
+                    <a href="https://github.com/Daniel001-odii/shelf" target="_blank"><i class="bi bi-github"></i></a>
+                    <a href="http://projshelf.herokuapp.com/" target="_blank"><i class="bi bi-arrow-up-right-square"></i></a> 
                 </span>
             </div>
         </div>
