remove saas statement

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p class="about">I enjoy creativity and build things.</p>
             <p class="text info">I’m a web developer and graphic designer specializing in 
                 building and designing usable and problem solving digital solutions using my skill-set.
-                Currently, I’m focused on creating all friendly, responsive and elegant websites transitioning into SAAS.</p>
+                Currently, I’m focused on creating all friendly, responsive and elegant websites.</p>
   
         </div>
 </div>
