add gpa calculator to index html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  
         <a href="#about"><i class="bi bi-person"></i></a>
         <a href="#projects"><i class="bi bi-code-slash"></i></a>
-        <a target="_blank" href="https://drive.google.com/file/d/1-qDbdm3_-J7VyuAswzYRHLrFcT38zpiU/view?usp=sharingDesigner"><i class="bi bi-palette-fill"></i></a>
+        <!-- <a target="_blank" href="https://drive.google.com/file/d/1-qDbdm3_-J7VyuAswzYRHLrFcT38zpiU/view?usp=sharingDesigner"><i class="bi bi-palette-fill"></i></a> -->
         <a target="_blank" href="https://drive.google.com/drive/folders/1yK5gWcKH5PlmmPe3z09rNkMNV9lntszR?usp=sharing"><i class="bi bi-folder-check"></i></a>
    
 </div>
@@ -47,7 +47,7 @@
         <div class="links">
             <div class=""><a href="#about">About</a></div>
             <div class=""> <a href="#projects">Developer</a></div>
-            <div class=""><a target="_blank" href="https://drive.google.com/file/d/1-qDbdm3_-J7VyuAswzYRHLrFcT38zpiU/view?usp=sharingDesigner">Designer</a></div>
+            <!-- <div class=""><a target="_blank" href="https://drive.google.com/file/d/1-qDbdm3_-J7VyuAswzYRHLrFcT38zpiU/view?usp=sharingDesigner">Designer</a></div> -->
             <a target="_blank" href="https://drive.google.com/drive/folders/1yK5gWcKH5PlmmPe3z09rNkMNV9lntszR?usp=sharing"><button class="my-btn"> Portfolio</button></a>
         </div>
     </div>
@@ -56,10 +56,10 @@
         <div class="intro">
             <p class="text code">Hi, my name is</p>
             <p class="name">Odii Daniel</p>
-            <p class="about">I enjoy creativity and build things.</p>
-            <p class="text info">I’m a web developer and graphic designer specializing in 
+            <p class="about">I Build things that live on the web</p>
+            <p class="text info">I’m a web developer specializing in 
                 building and designing usable and problem solving digital solutions using my skill-set.
-                Currently, I’m focused on creating all friendly, responsive and elegant websites.</p>
+                Currently, I’m focused on creating beautiful, responsive and elegant websites with great backend structures.</p>
   
         </div>
 </div>
@@ -71,9 +71,8 @@
     <span class="about left heading scrollFade">About me.</span>
     <div class="sub">
         <p class="text info">
-            Hi there! My name is Daniel and I enjoy creativity, currently creating things that live on the internet. 
-            I am a very enthusiastic, reliable and diligent individual who has years of experience building and designing responsive, mobile friendly and elegant web pages and apps with high quality service to potential clients.
-            Currently am working as a freelancer on the worlds larget freelance market place <a href="https://www.upwork.com/freelancers/~01beab0c0a35e434b4"><b>@Upwork</b></a> and have had the opportunity
+            Meet Daniel a very enthusiastic, reliable and diligent individual who has years of experience building and designing responsive, digital solutions tha live on the web.
+            Currently a <b>top-rated</b> freelancer on the worlds larget freelance market place <a href="https://www.upwork.com/freelancers/~01beab0c0a35e434b4"><b>@Upwork</b></a> and have had the opportunity
             to render professional services to clients globally. <br/> currently volunterring as a web developer <a href="https://grassroots-web.com/"><b>@Grassroots web.</b></a>
         </p>
 
@@ -91,7 +90,7 @@
 
 
 <div class="section" id="projects">
-    <span class="about left heading">Check out my Projects!</span>
+    <span class="about left heading">Check out my Projects</span>
 
 
     <div class="my-card scrollFade" style="margin-top: 50px !important;" >
@@ -163,6 +162,27 @@
     </div>
 
 
+    <div class="my-card scrollFade" style="margin-top: 60px !important;" data-aos="fade-left">
+        <img class="card-image" src="images/gpa_calculator.PNG">
+        <div class="card-content">
+        <div class="card-head">
+            <span class="sub-1 code">featured Project</span>
+            <p class="card-name">GPA Calculator<br/> for students</p>
+            <div class="card-main">
+                Calculating Grade Point Average for Unviversity and college students has been made easy using this javascript powered calculator.
+                a nice Ui and responsiveness to enable viewing and accessiblity across all devices and screen(s).
+            </div>
+            <div class="card-footer">
+                <p class="text code">CSS, Javascript, HTML, django</p>
+                <span class="source">
+                    <a href="https://github.com/Daniel001-odii/GPA_Calculator" target="_blank"><i class="bi bi-github"></i></a>
+                    <a href="https://daniel001-odii.github.io/GPA_Calculator/" target="_blank"><i class="bi bi-arrow-up-right-square"></i></a> 
+                </span>
+            </div>
+        </div>
+        </div>
+    </div>
+
 
 </div>
 
@@ -175,10 +195,9 @@
             you sure would want to speak with me right away, Whether you have a question or just want to say hi, 
             I’ll try my best to get back to you!
         </p>
-        <button class="my-btn code">say hello!</button>
+        <a href="mailto:xenithheight@gmail.com?subject=Your portfolio visitor"><button class="my-btn code">say hello!</button></a>
     </div>
-
-
+    
     
 </div>
 
